bugfixes on mobile version

--- a/public/stylesheets/media-queries/ipads.css
+++ b/public/stylesheets/media-queries/ipads.css
@@ -11,6 +11,10 @@
     margin-left: 5%!important
 }
 
+.t-d-b{
+    margin-top: 30px!important;
+}
+
 #horizontal-timeline{
     display: none;
 }
